# C-Fmt

./: CMakeLists.txt  README.md  a_cvector.h  a_string.h  c_strat.c  cdefer.h  cexcept.c  cexcept.h  cfmt.c  cfmt.h  chash.h  citer.c  citer.h  coptional.c  coptional.h  creadonly.c  creadonly.h  cresult.c  cresult.h  cstrat.h  cstring.c  cstring.h  main.c
examples/: cdefer_ex.c  cexcept_ex.c  cfmt_ex.c  chash_exec.c  citerator_ex.c  coptional_ex.c  creadonly_ex.c  cresult.c  cstrat_ex.c  cstring_ex.c  cvector_ex.c
